<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_bottom" />
    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/upcoming_bottom" />
    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/baseline_dashboard_24"
        android:title="@string/finished_bottom" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite_bottom" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting_bottom" />
</menu>
