<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- ImageView for mediaCover or imageLogo -->
        <ImageView
            android:id="@+id/ivMediaCover"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/event_image" />

        <!-- Favorite Button -->
        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background"
            android:contentDescription="@string/favorite"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintBottom_toTopOf="@id/tvEventName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.896"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMediaCover"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/ivMediaCover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Organizer Name -->
        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/tvEventName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" />

        <!-- Begin Time -->
        <TextView
            android:id="@+id/tvBeginTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvRemainingQuota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOwnerName"
            android:gravity="center" />

        <!-- Remaining Quota -->
        <TextView
            android:id="@+id/tvRemainingQuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="4dp"
            android:paddingBottom="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvBeginTime"
            app:layout_constraintTop_toBottomOf="@id/tvOwnerName"
            android:gravity="center" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupTimeAndQuota"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="tvBeginTime,tvRemainingQuota" />

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <!-- Event Description -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:lineSpacingExtra="4dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBeginTime" />

        <!-- Register Now Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
